--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy eAssist API
 
 on:
   push:
-    branches: [ "releases" ]
+    branches: [ "main", "releases" ]
   release:
     types: [ published ]
   workflow_dispatch:
@@ -25,8 +25,8 @@ jobs:
     name: Build and Deploy eAssist API
     runs-on: ubuntu-latest
     if: >-
-      ${{ (github.ref == 'refs/heads/releases' && github.event_name == 'push')
-          || (github.event_name == 'release' && github.event.release.target_commitish == 'releases')
+      ${{ ((github.ref == 'refs/heads/releases' || github.ref == 'refs/heads/main') && github.event_name == 'push')
+          || (github.event_name == 'release' && (github.event.release.target_commitish == 'releases' || github.event.release.target_commitish == 'main'))
           || github.event_name == 'workflow_dispatch' }}
     env:
       DEPLOY_PATH: /opt/eassist-api
@@ -67,7 +67,9 @@ jobs:
 
       - name: Read version
         id: v
-        run: echo "version=$(node -e \"console.log(require('./package.json').version)\")" >> $GITHUB_OUTPUT
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Start SSH agent
         uses: webfactory/ssh-agent@v0.9.0
